fix: almost finalised css of landings page (not responsive)

--- a/wwwroot/assets/css/style.css
+++ b/wwwroot/assets/css/style.css
@@ -248,9 +248,9 @@ body {
 .landingsPageContnetBox {
     background-color: #202020;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     justify-content: center;
-    height: calc(100vh - 80px);
+    height: calc(100vh - 168.4px);
     margin: 0 0 10px;
     padding-top: 80px;
 }
@@ -262,7 +262,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding-top: 15vh;
+    padding-top: 0vh;
     align-self: flex-start;
     /* background-color: #7a7a7a; */
 }
@@ -276,11 +276,11 @@ body {
     width: fit-content;
     /* align-items: flex-end; */
     /* padding-bottom: 20vh; */
-    padding-top: 15vh;
+    padding-top: 0vh;
 }
 
 #memberStats {
-    margin: 0 10px 0 10px;
+    margin: 0 8px 0 10px;
 }
 
 #answerStats {
@@ -299,27 +299,30 @@ body {
     flex-direction: column;
     margin: 0;
     /* height: 340px; */
-    border-radius: 3px;
+    border-radius: 3px 3px 3px 100px;
     padding: 15px;
 }
 
 .statisticContainer h1 {
     /* color: rgb(88, 88, 88); */
     font-family: Tahoma, sans-serif;
-    margin: 0;
+    margin: 0 0 0 0;
     font-size: 40px;
 }
 
 .statisticContainer h4 {
     font-family: Tahoma, sans-serif;
-    margin: 0 0 0 15px;
+    opacity: 0.8;
+    margin: 0 0 25px 15px;
     position: relative;
-    top: 6px;
+    bottom: 6px;
+    font-style: oblique -5deg;
 }
 
 .statisticContainer h5 {
+    display: none;
     font-family: Tahoma, sans-serif;
-    margin: 0 0 20px 5px;
+    margin: 0 0 10px 5px;
     font-weight: 100;
     position: relative;
     opacity: 0.5;
@@ -346,6 +349,7 @@ body {
 
 .rowItem {
     display: flex;
+    flex-direction: row-reverse;
 }
 
 .statValue {
@@ -356,7 +360,7 @@ body {
 }
 
 .theSideWithTheText h1 {
-    margin: 5px 30px 0 35px;
+    margin: 0 30px 0 35px;
     font-size: 3.4vw;
     color: #d91414;
     letter-spacing: 0.04em;
@@ -373,7 +377,7 @@ body {
     /* background-color: #000000; */
     width: 875px;
     /* align-self: center; */
-    text-align: right;
+    text-align: left;
 }
 
 .belowStatistics {
@@ -381,8 +385,8 @@ body {
     display: flex;
     font-size: 20px;
     opacity: 0.5;
-    margin-right: 4%;
-    align-self: flex-end;
+    margin-left: 4%;
+    align-self: flex-start;
 }
 
 .belowStatistics p {
@@ -1297,6 +1301,20 @@ code {
     font-size: 45px;
 }
 
+.TitleCardContainer {
+    padding-top: 80px;
+    background-image: linear-gradient(to bottom right, #ca1111, #a01111);
+    font-family: 'Trebuchet MS', sans-serif;
+    color: aliceblue;
+}
+
+.TitleCardContainer p {
+    margin: 0;
+    padding: 15px;
+    font-weight: 900;
+    font-size: 50px;
+}
+
 .basicButton {
     border: none;
     background-image: linear-gradient(to bottom right, rgb(181, 36, 36), rgb(125, 25, 25));
@@ -1322,9 +1340,17 @@ code {
     background-image: linear-gradient(to bottom right, #0a1627, #060606)!important;
 }
 
+.statisticsContainer {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-end;
+    margin-right: 10px;
+}
+
 .joinUsButton {
     border: none;
     font-family: Tahoma, sans-serif;
+    align-self: flex-end;
     background-image: linear-gradient(to bottom right, #b52424, #7d1919);
     font-size: 25px;
     padding: 10px;
@@ -1361,11 +1387,11 @@ code {
 }
 
 .landingspageButtons {
-    margin-top: 10px;
+    margin-top: 5px;
     margin-left: 3.7%;
     display: flex;
     align-items: flex-end;
-    align-self: center;
+    align-self: flex-start;
     flex-direction: row;
     font-family: 'Trebuchet MS', sans-serif;
 }
